First digit page working

--- a/components/layouts/DigitPageLayout/DigitPageLayout.module.scss
+++ b/components/layouts/DigitPageLayout/DigitPageLayout.module.scss
@@ -3,6 +3,15 @@
   width: 100%;
   padding: 6px;
 
+  &.light {
+    background-color: white;
+    color: black;
+
+    a {
+      color: black;
+    }
+  }
+
   nav {
     padding: 6px;
   }
