--- a/components/layouts/DigitPageLayout/DigitPageLayout.module.scss
+++ b/components/layouts/DigitPageLayout/DigitPageLayout.module.scss
@@ -10,6 +10,12 @@
     a {
       color: black;
     }
+
+    button {
+      background: white;
+      border-color: black;
+      color: black;
+    }
   }
 
   nav {
